--- a/src/styles/fonts/index.css
+++ b/src/styles/fonts/index.css
@@ -1,5 +1,3 @@
-@import url('http://fonts.cdnfonts.com/css/intro');
-
 @font-face {
   font-family: "AudiowideRegular";
   src: url(Audiowide-Regular.ttf) format("ttf"),
@@ -15,3 +13,17 @@
   font-style: normal;
   font-display: swap;
 }
+
+@font-face {
+  font-family: 'Intro Demo';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Intro Demo'), url('https://fonts.cdnfonts.com/s/12893/IntroDemoBlackCaps.woff') format('woff');
+}
+@font-face {
+  font-family: 'Intro Demo';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Intro Demo'), url('https://fonts.cdnfonts.com/s/12893/IntroDemoBlackCapsInline.woff') format('woff');
+}
+
